# PMSM

./: .gitignore  .gitigonre  LICENSE  MP-DSC.py  README.md  README_zh.md  pmsm_sim.py  pyproject.toml
configs/basic_fcs_mpc/: fcs_mpc.toml
configs/preindl_2013/: mp_dsc.toml
configs/preindl_2013_mp_dsc/: mp_dsc.toml
docs/: README.md
docs/notes/: README.md
docs/papers/: README.md
docs/papers/basic_fcs_mpc/: README.md  notes.md
docs/papers/preindl_2013/: README.md
docs/papers/preindl_2013_mp_dsc/: README.md  notes.md
experiments/: README.md
experiments/basic_fcs_mpc/: README.md
experiments/preindl_2013/: README.md
experiments/preindl_2013_mp_dsc/: README.md
scripts/: run_experiment.py
src/pmsm/: __init__.py
src/pmsm/common/: __init__.py  motor_model.py  plot_utils.py  transforms.py
src/pmsm/core/: __init__.py
src/pmsm/papers/: __init__.py
src/pmsm/papers/basic_fcs_mpc/: README.md  __init__.py  config.py  controller.py  simulation.py
src/pmsm/papers/future_paper_202X/: __init__.py  controller.py  simulation.py
src/pmsm/papers/preindl_2013/: __init__.py  mp_dsc.py
src/pmsm/papers/preindl_2013_mp_dsc/: README.md  __init__.py  controller.py  simulation.py
src/pmsm/utils/: __init__.py
src/pmsm/visualization/: __init__.py
tests/: README.md  test_basic_fcs_mpc_accuracy.py  test_basic_fcs_mpc_config.py  test_basic_fcs_mpc_plot.py  test_common.py  test_fcs_mpc.py  test_preindl_mp_dsc.py
