[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmsm"
version = "0.1.0"
description = "PMSM 模型预测直接转速控制示例"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[project.scripts]
pmsm-sim = "pmsm.papers.preindl_2013_mp_dsc:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
